--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
+    "mdbreact": "^5.2.0",
+    "moment-timezone": "^0.5.34",
     "next": "12.0.7",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-moment": "^1.1.1",
+    "react-paginate": "^8.0.3",
+    "swr": "^1.1.0"
   },
   "devDependencies": {
     "eslint": "8.4.1",
